export interface User {
    username: string;
    score: number;
}